--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -1,3 +1,10 @@
+.App {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: min-content 1fr;
+}
+
 #background-video {
     position: fixed;
     inset: 0;
