--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -3,6 +3,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: min-content 1fr;
+
+  &::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    backdrop-filter: blur(0.3rem);
+    z-index: -1;
+  }
 }
 
 #background-video {
@@ -11,5 +19,5 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: -2;
   }
