--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -4,10 +4,25 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 1rem;
     justify-items: center;
+    align-items: center;
   }
   
   .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 8rem;
     aspect-ratio: 1;
-    background-color: white;
+    background-color: hsl(0 0% 100% / 0.9);
+  padding: 0.5rem;
+  border-radius: 1rem;
+
+  img {
+    border-radius: 0.8rem;
+  }
+
+  p {
+    line-height: 1;
+    padding-top: 0.5rem;
+  }
   }
