--- a/src/styles/components/_scoreboard.scss
+++ b/src/styles/components/_scoreboard.scss
@@ -1,8 +1,7 @@
 .scoreboard-container {
     justify-self: end;
+    align-self: center;
     width: max-content;
     padding: 1rem;
-    margin: 1rem;
-    background-color: white;
     border-radius: 1rem;
   }
