--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'OnePiece';
+  src: local('OnePiece'), url(../../fonts/OnePiece-zAqL.ttf) format('truetype');
+}
+
+body{
+ font-family: 'OnePiece', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+ 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
+}
+
 #root {
     height: 100%;
   }
