Styling changes throughout

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -1,7 +1,6 @@
 .card-container {
-    grid-column: span 2;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1rem;
     justify-items: center;
     align-items: center;
@@ -11,18 +10,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 8rem;
+    width: 12rem;
     aspect-ratio: 1;
-    background-color: hsl(0 0% 100% / 0.9);
-  padding: 0.5rem;
-  border-radius: 1rem;
-
-  img {
+    background-color: hsl(0% 0% 90% / 1);
+    padding: 0.8rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    font-size: var(--fs-500);
+    box-shadow: var(--shadow-primary);
+  
+    img {
+    object-fit: cover;
     border-radius: 0.8rem;
+    width: 100%;
+    aspect-ratio: 1;
   }
 
   p {
     line-height: 1;
-    padding-top: 0.5rem;
+    padding-top: 0.8rem;
   }
   }
