--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -12,7 +12,7 @@
     align-items: center;
     width: 12rem;
     aspect-ratio: 1;
-    background-color: hsl(0% 0% 90% / 1);
+    background-color: hsl(0 0% 90% / 1);
     padding: 0.8rem;
     border-radius: 1rem;
     cursor: pointer;
