Updated styling for images

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -27,7 +27,7 @@
     object-fit: cover;
     border-radius: 0.8rem;
     width: 100%;
-    aspect-ratio: 1;
+    aspect-ratio: 1 / 1.2;
   }
 
   p {
