--- a/src/styles/components/_scoreboard.scss
+++ b/src/styles/components/_scoreboard.scss
@@ -11,11 +11,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 9rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.2rem;
     background-color: var(--bg-transparent);
     border-radius: 100vmax;
     font-size: var(--fs-500);
+    line-height: 1;
     box-shadow: var(--shadow-primary);
+
+
+    &:nth-of-type(1) {
+      width: 120px;
+    }
+
+    &:nth-of-type(2) {
+      width: 160px;
+    }
   }
   }
