--- a/src/styles/components/_scoreboard.scss
+++ b/src/styles/components/_scoreboard.scss
@@ -1,30 +1,20 @@
 .scoreboard-container {
     justify-self: center;
-    align-self: center;
     display: flex;
-    gap: 1.2rem;
-    width: max-content;
-    padding: 1rem;
     border-radius: 1rem;
+    margin-bottom: 0.5rem;
+    padding: 0rem 1rem;
 
     p {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.5rem 1.2rem;
+    margin: 0.2rem 0.5rem;
     background-color: var(--bg-transparent);
     border-radius: 100vmax;
     font-size: var(--fs-500);
     line-height: 1;
     box-shadow: var(--shadow-primary);
-
-
-    &:nth-of-type(1) {
-      width: 120px;
-    }
-
-    &:nth-of-type(2) {
-      width: 160px;
-    }
   }
   }
