--- a/src/styles/base/_custom-props.scss
+++ b/src/styles/base/_custom-props.scss
@@ -1,6 +1,8 @@
 :root {
   --fs-400: clamp(0.9rem, 0.6rem + 1.6vw, 1.2rem);
   --fs-500: clamp(1rem, 0.6rem + 2.133vw, 1.4rem);
+  --fs-600: 1.6rem;
+  --fs-700: 2rem;
   --bg-transparent: hsl(0 0% 100% / 0.7);
   --shadow-primary: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
