Added additional custom props

--- a/src/styles/base/_custom-props.scss
+++ b/src/styles/base/_custom-props.scss
@@ -4,5 +4,8 @@
   --fs-600: 1.6rem;
   --fs-700: 2rem;
   --bg-transparent: hsl(0 0% 100% / 0.7);
+  --bg-wanted: hsl(23 21% 22% / 1);
+  --bg-modal: hsl(23 40% 92% / 1);
+  --bg-white: hsl(0 0% 100% / 1);
   --shadow-primary: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
