--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -55,6 +55,7 @@
   
     img {
     object-fit: cover;
+    object-position: top;
     border-radius: 0.8rem;
     width: 100%;
     aspect-ratio: 1 / 1.2;
